// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getContentWrapperStyle() should return correct css for width: basic 1`] = `
{
  "boxSizing": "border-box",
  "margin": "0 auto",
  "maxWidth": "1920px",
  "minWidth": "320px",
  "padding": "0 clamp(22px, 10.625vw - 12px, 192px)",
  "width": "100%",
}
`;

exports[`getContentWrapperStyle() should return correct css for width: extended 1`] = `
{
  "margin": "0 auto",
  "maxWidth": "1920px",
  "minWidth": "320px",
  "width": "100%",
}
`;

exports[`getContentWrapperStyle() should return correct css for width: fluid 1`] = `
{
  "minWidth": "320px",
  "width": "100%",
}
`;
